--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -32,6 +32,8 @@ jobs:
         with:
           components: rustfmt, clippy
 
+      - uses: Swatinem/rust-cache@v2
+
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
         with:
@@ -71,6 +73,8 @@ jobs:
           
       - name: Setup Rust Toolchain
         uses: dtolnay/rust-toolchain@stable
+
+      - uses: Swatinem/rust-cache@v2
 
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
