--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -57,7 +57,9 @@ jobs:
         run: rinf message
 
       - name: Format message files
-        run: cargo fmt -- native/hub/src/messages/**/*.rs
+        run: |
+          ls -al native/hub/src/messages/
+          cargo fmt -- native/hub/src/messages/**/*.rs
 
       - name: Run cargo fmt
         run: cargo fmt -- --check
