--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -58,6 +58,7 @@ jobs:
 
       - name: Format message files
         run: |
+          shopt -s globstar
           ls -al native/hub/src/messages/
           cargo fmt -- native/hub/src/messages/**/*.rs
 
