fix(ci): Enable globstar to fix lint (#167)
* Update linter.yml

Signed-off-by: XMLHexagram <52130356+XMLHexagram@users.noreply.github.com>

* Update linter.yml

Signed-off-by: XMLHexagram <52130356+XMLHexagram@users.noreply.github.com>

* Update linter.yml

Signed-off-by: XMLHexagram <52130356+XMLHexagram@users.noreply.github.com>

---------

Signed-off-by: XMLHexagram <52130356+XMLHexagram@users.noreply.github.com>

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -57,7 +57,9 @@ jobs:
         run: rinf message
 
       - name: Format message files
-        run: cargo fmt -- native/hub/src/messages/**/*.rs
+        run: |
+          shopt -s globstar
+          cargo fmt -- native/hub/src/messages/**/*.rs
 
       - name: Run cargo fmt
         run: cargo fmt -- --check
