--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -17,6 +17,7 @@ rinf = "7.0.2"
 prost = "0.12.6"
 tokio = { version = "1.40.0", features = ["sync", "time", "rt-multi-thread"] }
 sea-orm = "1.1.0"
+lyric = { path = "../../lyric" }
 database = { path = "../../database" }
 analysis = { path = "../../analysis" }
 playback = { path = "../../playback" }
