--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,10 @@ dependencies:
     git:
       url: https://github.com/Losses/system_tray.git
       ref: e0fd539785d2f656a8efd76376c6f2225848b9be
+  scrollable_positioned_list:
+    git:
+      url: https://github.com/Losses/scrollable_positioned_list.git
+      ref: a19ffbbb705c00b7bb68745f6f8e43e58b4b23f3
 
 dev_dependencies:
   build_runner: ^2.4.11
