--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -10,11 +10,17 @@ path = "src/lib.rs"
 
 [dependencies]
 log = { version = "0.4.22" }
-sea-orm = { version = "1.1.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros", "debug-print" ] }
+sea-orm = { version = "1.1.0", features = [
+    "sqlx-sqlite",
+    "runtime-async-std-native-tls",
+    "macros",
+    "debug-print",
+] }
 sea-orm-migration = "1.1.0"
 migration = { path = "../migration" }
 metadata = { path = "../metadata" }
 analysis = { path = "../analysis" }
+playback = { path = "../playback" }
 futures = "0.3.30"
 tokio = { version = "1.40.0", features = ["fs"] }
 arroy = "0.4.0"
@@ -26,13 +32,16 @@ deunicode = "1.6.0"
 paste = "1.0.15"
 chrono = "0.4.38"
 tokio-util = "0.7.11"
-anyhow = {version="1.0.86",  features = ["backtrace"] }
+anyhow = { version = "1.0.86", features = ["backtrace"] }
 rayon = "1.10.0"
 seq-macro = "0.3.5"
 once_cell = "1.19.0"
 rust_decimal = "1.36.0"
 rust_decimal_macros = "1.36.0"
-windows = { version="0.58.0", features = ["Win32_Storage", "Win32_Storage_FileSystem"] }
+windows = { version = "0.58.0", features = [
+    "Win32_Storage",
+    "Win32_Storage_FileSystem",
+] }
 async-trait = "0.1.83"
 thiserror = "2.0.3"
 uuid = { version = "1.11.0", features = ["v4"] }
