--- a/scrobbling/Cargo.toml
+++ b/scrobbling/Cargo.toml
@@ -16,3 +16,7 @@ reqwest = { version = "0.12.9", features = ["blocking", "json", "socks"] }
 serde = "1.0.216"
 serde_json = "1.0.133"
 tokio = { version = "1.42.0" }
+
+[dev-dependencies]
+clap = "4.5.9"
+rand = "0.8.5"
