--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -21,6 +21,7 @@ lyric = { path = "../../lyric" }
 database = { path = "../../database" }
 analysis = { path = "../../analysis" }
 playback = { path = "../../playback" }
+scrobbling = { path = "../../scrobbling" }
 lazy_static = "1.5.0"
 dunce = "1.0.4"
 log = "0.4.22"
