--- a/playback/Cargo.toml
+++ b/playback/Cargo.toml
@@ -41,6 +41,7 @@ windows = { version = "0.44.0", features = [
     "Win32_Graphics_Gdi",
 ] }
 once_cell = "1.20.2"
+simple_channel = { path = "../simple-channel" }
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
 souvlaki = "0.7.3"
@@ -48,4 +49,3 @@ souvlaki = "0.7.3"
 [target.'cfg(target_os = "android")'.dependencies]
 ndk-context = "0.1.1"
 jni = "0.21.1"
-
