--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   visibility_detector: ^0.4.0+2
   path_provider: ^2.1.3
   path: ^1.9.0
-  crypto: ^3.0.3
+  crypto: ^3.0.6
   crclib: ^3.0.0
   reorderables: ^0.6.0
   material_color_utilities: ^0.11.1
@@ -83,6 +83,8 @@ dependencies:
       url: https://github.com/Losses/scrollable_positioned_list.git
       ref: 0ec616519c68ff004c014a6907ff04d2cba43b7f
   desktop_drop: ^0.5.0
+  uuid: ^3.0.7
+  pointycastle: ^3.9.1
 
 dev_dependencies:
   build_runner: ^2.4.11
