--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -35,7 +35,6 @@ tracing-appender = "0.2.3"
 chrono = "0.4.38"
 windows = { version = "0.58.0", features = ["Services", "Services_Store" ] }
 sha2 = "0.10.8"
-swift-bridge = "0.1.57"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
@@ -54,3 +53,7 @@ swift-bridge-build = "0.1.57"
 # Android dependencies
 [target.'cfg(target_os = "android")'.dependencies]
 tracing-logcat = "0.1.0"
+
+# macOS dependencies
+[target.'cfg(target_os = "macos")'.dependencies]
+swift-bridge = "0.1.57"
