--- a/playback/Cargo.toml
+++ b/playback/Cargo.toml
@@ -42,7 +42,7 @@ windows = { version = "0.44.0", features = [
 ] }
 once_cell = "1.20.2"
 
-[target.'cfg(not(target_os = "android"))'.dependencies]
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 souvlaki = "0.7.3"
 
 [target.'cfg(target_os = "android")'.dependencies]
