--- a/scrobbling/Cargo.toml
+++ b/scrobbling/Cargo.toml
@@ -17,6 +17,7 @@ serde = "1.0.216"
 serde_json = "1.0.133"
 tokio = { version = "1.42.0" }
 simple_channel = { path = "../simple-channel" }
+log = "0.4.22"
 
 [dev-dependencies]
 clap = "4.5.9"
