--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ dependencies:
   desktop_drop: ^0.5.0
   uuid: ^3.0.7
   pointycastle: ^3.9.1
+  collection: ^1.18.0
 
 dev_dependencies:
   build_runner: ^2.4.11
