--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ dependencies:
   uuid: ^3.0.7
   pointycastle: ^3.9.1
   collection: ^1.18.0
+  clipboard: ^0.1.3
 
 dev_dependencies:
   build_runner: ^2.4.11
