--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@
 # various Rust configurations.
 
 [workspace]
-members = ["./native/*", "./cli"]
+members = ["./native/*", "./cli", "tag-editor"]
 resolver = "2"
 
 [patch.crates-io]
