--- a/tag-editor/Cargo.toml
+++ b/tag-editor/Cargo.toml
@@ -10,10 +10,13 @@ path = "src/lib.rs"
 
 [dependencies]
 analysis = { path = "../analysis" }
-anyhow = {version="1.0.86",  features = ["backtrace"] }
+anyhow = { version = "1.0.86", features = ["backtrace"] }
 log = "0.4.22"
 rubato = "0.16.1"
 rustfft = "6.2.0"
 symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
 tokio-util = "0.7.11"
 tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
+
+[dev-dependencies]
+clap = "4.5.9"
