--- a/tag-editor/Cargo.toml
+++ b/tag-editor/Cargo.toml
@@ -17,6 +17,8 @@ rustfft = "6.2.0"
 symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
 tokio-util = "0.7.11"
 tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
+byteorder = "1.5.0"
+crc32fast = "1.4.2"
 
 [dev-dependencies]
 clap = "4.5.9"
