--- a/tag-editor/Cargo.toml
+++ b/tag-editor/Cargo.toml
@@ -19,6 +19,13 @@ tokio-util = "0.7.11"
 tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
 byteorder = "1.5.0"
 crc32fast = "1.4.2"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.134"
+reqwest = { version = "0.12.11", features = ["json"] }
+base64 = "0.22.1"
+uuid = { version = "1.11.0", features = ["v4"] }
+chrono = "0.4.39"
+rand = "0.8.5"
 
 [dev-dependencies]
 clap = "4.5.9"
