--- a/tag-editor/Cargo.toml
+++ b/tag-editor/Cargo.toml
@@ -26,6 +26,7 @@ base64 = "0.22.1"
 uuid = { version = "1.11.0", features = ["v4"] }
 chrono = "0.4.39"
 rand = "0.8.5"
+lazy_static = "1.5.0"
 
 [dev-dependencies]
 clap = "4.5.9"
