--- a/playback/Cargo.toml
+++ b/playback/Cargo.toml
@@ -43,7 +43,7 @@ windows = { version = "0.44.0", features = [
 once_cell = "1.20.2"
 simple_channel = { path = "../simple-channel" }
 
-[target.'cfg(not(target_os = "android"))'.dependencies]
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 souvlaki = "0.7.3"
 
 [target.'cfg(target_os = "android")'.dependencies]
