--- a/playback/Cargo.toml
+++ b/playback/Cargo.toml
@@ -43,8 +43,8 @@ windows = { version = "0.44.0", features = [
 once_cell = "1.20.2"
 simple_channel = { path = "../simple-channel" }
 
-[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-souvlaki = "0.7.3"
+[target.'cfg(not(any(target_os = "android")))'.dependencies]
+souvlaki = { git = "https://github.com/XMLHexagram/souvlaki", branch = "master" }
 
 [target.'cfg(target_os = "android")'.dependencies]
 ndk-context = "0.1.1"
