--- a/playback/Cargo.toml
+++ b/playback/Cargo.toml
@@ -44,7 +44,7 @@ once_cell = "1.20.2"
 simple_channel = { path = "../simple-channel" }
 
 [target.'cfg(not(any(target_os = "android")))'.dependencies]
-souvlaki = { git = "https://github.com/XMLHexagram/souvlaki", branch = "master" }
+souvlaki = { git = "https://github.com/Losses/souvlaki", branch = "master" }
 
 [target.'cfg(target_os = "android")'.dependencies]
 ndk-context = "0.1.1"
