--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,10 @@ dependencies:
   very_good_infinite_list: ^0.9.0
   flutter_fullscreen: ^1.0.1
   device_info_plus: ^11.1.1
-  macos_secure_bookmarks: ^0.2.1
+  macos_secure_bookmarks:
+    git:
+      url: https://github.com/XMLHexagram/macos_secure_bookmarks.git
+      ref: master
   permission_handler: ^11.3.1
   animated_flip_counter: ^0.3.4
   intl: ^0.19.0
