--- a/tag-editor/Cargo.toml
+++ b/tag-editor/Cargo.toml
@@ -27,6 +27,7 @@ uuid = { version = "1.11.0", features = ["v4"] }
 chrono = "0.4.39"
 rand = "0.8.5"
 once_cell = "1.20.2"
+rusty-chromaprint = { git = "https://github.com/Losses/rusty-chromaprint", rev = "db4d9af2dd66f8c7f38f04725fb1780e64b4686f" }
 
 [dev-dependencies]
 clap = "4.5.9"
