--- a/tag-editor/Cargo.toml
+++ b/tag-editor/Cargo.toml
@@ -21,7 +21,7 @@ byteorder = "1.5.0"
 crc32fast = "1.4.2"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
-reqwest = { version = "0.12.11", features = ["json"] }
+reqwest = { version = "0.12.11", features = ["json", "gzip"] }
 base64 = "0.22.1"
 uuid = { version = "1.11.0", features = ["v4"] }
 chrono = "0.4.39"
