--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -37,6 +37,9 @@ tracing-appender = "0.2.3"
 chrono = "0.4.38"
 windows = { version = "0.58.0", features = ["Services", "Services_Store" ] }
 sha2 = "0.10.8"
+tokio-tungstenite = "0.26.1"
+futures-channel = "0.3.31"
+futures-util = "0.3.31"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
