--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -48,6 +48,7 @@ axum = "0.8.1"
 tower = "0.5.2"
 tower-http ={ version = "0.6.2", features = ["fs"] }
 axum-server = "0.7.1"
+uuid = "1.11.1"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
