--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -16,6 +16,10 @@ crate-type = ["lib", "cdylib", "staticlib"]
 name = "rune-server"
 path = "src/server/main.rs"
 
+[[bin]]
+name = "rune-client"
+path = "src/remote/main.rs"
+
 [dependencies]
 rinf = "7.0.2"
 prost = "0.12.6"
@@ -54,6 +58,9 @@ tower-http ={ version = "0.6.2", features = ["fs"] }
 axum-server = "0.7.1"
 uuid = "1.11.1"
 url = "2.5.4"
+rustyline = "15.0.0"
+rustyline-derive = "0.11.0"
+radix_trie = "0.2.1"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
