--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -18,7 +18,7 @@ path = "src/server/main.rs"
 
 [[bin]]
 name = "rune-client"
-path = "src/remote/main.rs"
+path = "src/server/client/main.rs"
 
 [dependencies]
 rinf = "7.0.2"
@@ -61,6 +61,7 @@ url = "2.5.4"
 rustyline = { version = "15.0.0", features = ["with-sqlite-history"] }
 rustyline-derive = "0.11.0"
 radix_trie = "0.2.1"
+shlex = "1.3.0"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
