--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -62,6 +62,7 @@ rustyline = { version = "15.0.0", features = ["with-sqlite-history"] }
 rustyline-derive = "0.11.0"
 radix_trie = "0.2.1"
 shlex = "1.3.0"
+regex = "1.11.1"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
