--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -63,6 +63,9 @@ rustyline-derive = "0.11.0"
 radix_trie = "0.2.1"
 shlex = "1.3.0"
 regex = "1.11.1"
+term_size = "0.3.2"
+colored = "3.0.0"
+unicode-width = "0.2.0"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
