--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -66,6 +66,7 @@ regex = "1.11.1"
 term_size = "0.3.2"
 colored = "3.0.0"
 unicode-width = "0.2.0"
+clean-path = "0.2.1"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
