--- a/discovery/Cargo.toml
+++ b/discovery/Cargo.toml
@@ -13,12 +13,16 @@ async-trait = "0.1.85"
 axum = "0.8.2"
 axum-server = "0.7.1"
 bytes = "1.9.0"
-chrono = "0.4.39"
-reqwest = "0.12.12"
-serde = "1.0.217"
+chrono = { version = "0.4.39", features = ["serde"] }
+reqwest = { version = "0.12.12", features = ["json"] }
+serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 serde_urlencoded = "0.7.1"
-tokio = "1.43.0"
+tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.2", features = ["cors", "limit"] }
-uuid = "1.12.1"
+uuid = { version = "1.12.1", features = ["v4"] }
+
+[dev-dependencies]
+clap = { version = "4.5.27", features = ["derive"] }
+rand = "0.8.5"
