--- a/discovery/Cargo.toml
+++ b/discovery/Cargo.toml
@@ -18,6 +18,7 @@ reqwest = { version = "0.12.12", features = ["json"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 serde_urlencoded = "0.7.1"
+socket2 = "0.5.8"
 tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.2", features = ["cors", "limit"] }
