--- a/discovery/Cargo.toml
+++ b/discovery/Cargo.toml
@@ -21,7 +21,7 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 serde_urlencoded = "0.7.1"
 socket2 = "0.5.8"
-tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
+tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal"] }
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.2", features = ["cors", "limit"] }
 uuid = { version = "1.12.1", features = ["v4"] }
