--- a/discovery/Cargo.toml
+++ b/discovery/Cargo.toml
@@ -17,12 +17,14 @@ chrono = { version = "0.4.39", features = ["serde"] }
 futures = "0.3.31"
 log = "0.4.25"
 netdev = "0.32.0"
+once_cell = "1.20.2"
 reqwest = { version = "0.12.12", features = ["json"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 serde_urlencoded = "0.7.1"
 socket2 = "0.5.8"
 tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal"] }
+tokio-util = "0.7.13"
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.2", features = ["cors", "limit"] }
 uuid = { version = "1.12.1", features = ["v4"] }
