--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ dependencies:
   pointycastle: ^3.9.1
   collection: ^1.18.0
   clipboard: ^0.1.3
+  asn1lib: ^1.5.8
 
 dev_dependencies:
   build_runner: ^2.4.11
