--- a/discovery/Cargo.toml
+++ b/discovery/Cargo.toml
@@ -23,8 +23,10 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 serde_urlencoded = "0.7.1"
 socket2 = "0.5.8"
+thiserror = "2.0.11"
 tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal"] }
 tokio-util = "0.7.13"
+toml = "0.8.19"
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.2", features = ["cors", "limit"] }
 uuid = { version = "1.12.1", features = ["v4"] }
