--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -69,6 +69,7 @@ colored = "3.0.0"
 unicode-width = "0.2.0"
 clean-path = "0.2.1"
 serde = "1.0.217"
+tower_governor = "0.6.0"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
