--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ dependencies:
   collection: ^1.18.0
   clipboard: ^0.1.3
   asn1lib: ^1.5.8
+  badges: ^3.1.2
 
 dev_dependencies:
   build_runner: ^2.4.11
