--- a/discovery/Cargo.toml
+++ b/discovery/Cargo.toml
@@ -17,19 +17,32 @@ chrono = { version = "0.4.39", features = ["serde"] }
 futures = "0.3.31"
 log = "0.4.25"
 netdev = "0.32.0"
+num-bigint = "0.4.6"
+num-integer = "0.1.46"
+num-traits = "0.2.19"
 once_cell = "1.20.2"
-reqwest = { version = "0.12.12", features = ["json"] }
+pem = "3.0.4"
+rcgen = "0.13.2"
+reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
+rsa = "0.9.7"
+rustls = "0.23.22"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 serde_urlencoded = "0.7.1"
+sha2 = "0.10.8"
 socket2 = "0.5.8"
 thiserror = "2.0.11"
+time = "0.3.37"
 tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal"] }
 tokio-util = "0.7.13"
 toml = "0.8.19"
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.2", features = ["cors", "limit"] }
 uuid = { version = "1.12.1", features = ["v4"] }
+webpki-roots = "0.26.8"
+x509-parser = "0.17.0"
+rand = "0.8.0"
+bincode = "1.3.3"
 
 [dev-dependencies]
 clap = { version = "4.5.27", features = ["derive"] }
