--- a/discovery/Cargo.toml
+++ b/discovery/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/lib.rs"
 anyhow = "1.0.95"
 async-trait = "0.1.85"
 axum = "0.8.2"
+hyper = "1.5.2"
 axum-server = "0.7.1"
 bytes = "1.9.0"
 chrono = { version = "0.4.39", features = ["serde"] }
@@ -43,6 +44,9 @@ webpki-roots = "0.26.8"
 x509-parser = "0.17.0"
 rand = "0.8.0"
 bincode = "1.3.3"
+tokio-rustls = "0.26.1"
+http-body-util = "0.1.2"
+hyper-util = "0.1.10"
 
 [dev-dependencies]
 clap = { version = "4.5.27", features = ["derive"] }
