--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -71,6 +71,9 @@ serde = "1.0.217"
 tower_governor = "0.6.0"
 rand = "0.8.0"
 sha2 = "0.10.8"
+toml = "0.8.20"
+directories = "6.0.0"
+humantime = "2.1.0"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
