--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -74,6 +74,7 @@ sha2 = "0.10.8"
 toml = "0.8.20"
 directories = "6.0.0"
 humantime = "2.1.0"
+ctrlc = "3.4.5"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
