--- a/discovery/Cargo.toml
+++ b/discovery/Cargo.toml
@@ -47,6 +47,7 @@ bincode = "1.3.3"
 tokio-rustls = "0.26.1"
 http-body-util = "0.1.2"
 hyper-util = "0.1.10"
+colored = "3.0.0"
 
 [dev-dependencies]
 clap = { version = "4.5.27", features = ["derive"] }
