--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -75,6 +75,9 @@ toml = "0.8.20"
 directories = "6.0.0"
 humantime = "2.1.0"
 rustls = { version = "0.23.22", features = ["aws_lc_rs"] }
+serde_json = "1.0.138"
+hyper = "1.6.0"
+http-body-util = "0.1.2"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
