--- a/discovery/Cargo.toml
+++ b/discovery/Cargo.toml
@@ -50,6 +50,7 @@ hyper-util = "0.1.10"
 colored = "3.0.0"
 http-body = "1.0.1"
 notify = "8.0.0"
+dashmap = "6.1.0"
 
 [dev-dependencies]
 clap = { version = "4.5.27", features = ["derive"] }
