--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -45,7 +45,7 @@ sysinfo = { version = "0.31.4", features = ["windows", "apple-app-store"] }
 tracing-appender = "0.2.3"
 chrono = { version = "0.4.38", features = ["serde"] }
 windows = { version = "0.58.0", features = ["Services", "Services_Store"] }
-tokio-tungstenite = "0.26.1"
+tokio-tungstenite = { version = "0.26.2", features = ["rustls", "rustls-tls-webpki-roots"] }
 futures-channel = "0.3.31"
 futures-util = "0.3.31"
 strum = "0.26.3"
