--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -78,6 +78,7 @@ rustls = { version = "0.23.23", features = ["aws_lc_rs"] }
 serde_json = "1.0.138"
 hyper = "1.6.0"
 http-body-util = "0.1.2"
+urlencoding = "2.1.3"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
