--- a/macos/Runner/Release.entitlements
+++ b/macos/Runner/Release.entitlements
@@ -16,6 +16,10 @@
 	<true/>
 	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
+	<key>com.apple.security.network.server</key>
+	<true/>
 	<key>keychain-access-groups</key>
 	<array/>
 </dict>
