--- a/native/hub/src/server/panel/package.json
+++ b/native/hub/src/server/panel/package.json
@@ -19,7 +19,6 @@
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
-		"@tailwindcss/vite": "^4.0.0",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -33,5 +32,13 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"@ax-design/elevation": "^0.0.2",
+		"@fluentui/tokens": "^1.0.0-alpha.21",
+		"@fluentui/web-components": "3.0.0-beta.82",
+		"@microsoft/fast-element": "^2.1.0",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"classnames": "^2.5.1"
 	}
 }
