--- a/native/hub/src/server/panel/package.json
+++ b/native/hub/src/server/panel/package.json
@@ -39,6 +39,7 @@
 		"@fluentui/web-components": "3.0.0-beta.82",
 		"@microsoft/fast-element": "^2.1.0",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"classnames": "^2.5.1"
+		"classnames": "^2.5.1",
+		"timeago.js": "^4.0.2"
 	}
 }
