--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -80,6 +80,8 @@ serde_json = "1.0.138"
 hyper = "1.6.0"
 http-body-util = "0.1.2"
 urlencoding = "2.1.3"
+jsonwebtoken = "9.3.1"
+base64 = "0.22.1"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
