--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -53,7 +53,7 @@ strum = "0.26.3"
 strum_macros = "0.26.4"
 requests = { path = "../requests" }
 clap = "4.5.26"
-axum = { version = "0.8.1", features = ["ws"] }
+axum = { version = "0.8.1", features = ["ws", "macros"] }
 tower = "0.5.2"
 tower-http = { version = "0.6.2", features = ["fs"] }
 axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
@@ -82,6 +82,7 @@ http-body-util = "0.1.2"
 urlencoding = "2.1.3"
 jsonwebtoken = "9.3.1"
 base64 = "0.22.1"
+bcrypt = "0.17.0"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
