--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -83,6 +83,7 @@ urlencoding = "2.1.3"
 jsonwebtoken = "9.3.1"
 base64 = "0.22.1"
 bcrypt = "0.17.0"
+rpassword = "7.3.1"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
