--- a/native/hub/src/server/panel/package.json
+++ b/native/hub/src/server/panel/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"@types/lodash-es": "^4",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -40,6 +41,7 @@
 		"@microsoft/fast-element": "^2.1.0",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"classnames": "^2.5.1",
+		"lodash-es": "^4.17.21",
 		"timeago.js": "^4.0.2"
 	}
 }
