--- a/discovery/Cargo.toml
+++ b/discovery/Cargo.toml
@@ -26,7 +26,7 @@ pem = "3.0.4"
 rcgen = "0.13.2"
 reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
 rsa = "0.9.7"
-rustls = "0.23.23"
+rustls = { version = "0.23.23"}
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 serde_urlencoded = "0.7.1"
