--- a/discovery/Cargo.toml
+++ b/discovery/Cargo.toml
@@ -12,7 +12,7 @@ anyhow = "1.0.95"
 async-trait = "0.1.85"
 axum = "0.8.2"
 hyper = "1.5.2"
-axum-server = "0.7.1"
+axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
 bytes = "1.9.0"
 chrono = { version = "0.4.39", features = ["serde"] }
 futures = "0.3.31"
@@ -24,9 +24,9 @@ num-traits = "0.2.19"
 once_cell = "1.20.2"
 pem = "3.0.4"
 rcgen = "0.13.2"
-reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12.12", features = ["json"] }
 rsa = "0.9.7"
-rustls = { version = "0.23.23"}
+rustls = { version = "0.23.23", features = ["ring"], default-features = false }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.137"
 serde_urlencoded = "0.7.1"
@@ -44,7 +44,7 @@ webpki-roots = "0.26.8"
 x509-parser = "0.17.0"
 rand = "0.8.0"
 bincode = "1.3.3"
-tokio-rustls = "0.26.1"
+tokio-rustls = { version = "0.26.1", features = ["logging", "tls12"], default-features = false }
 http-body-util = "0.1.2"
 hyper-util = "0.1.10"
 colored = "3.0.0"
