--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -46,7 +46,10 @@ sysinfo = { version = "0.31.4", features = ["windows", "apple-app-store"] }
 tracing-appender = "0.2.3"
 chrono = { version = "0.4.38", features = ["serde"] }
 windows = { version = "0.58.0", features = ["Services", "Services_Store"] }
-tokio-tungstenite = { version = "0.26.2", features = ["rustls", "rustls-tls-webpki-roots"] }
+tokio-tungstenite = { version = "0.26.2", features = [
+    "rustls",
+    "rustls-tls-webpki-roots",
+] }
 futures-channel = "0.3.31"
 futures-util = "0.3.31"
 strum = "0.26.3"
@@ -87,6 +90,12 @@ rpassword = "7.3.1"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
+vergen = { version = "9.0.4", features = [
+    "build",
+    "cargo",
+    "rustc",
+    "si",
+] }
 
 # Uncomment below to target the web.
 # tokio_with_wasm = { version = "0.6.0", features = ["sync", "rt"] }
