--- a/tag-editor/Cargo.toml
+++ b/tag-editor/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tag_editor"
+name = "tag-editor"
 version = "0.1.0"
 edition = "2021"
 
@@ -27,7 +27,7 @@ uuid = { version = "1.11.0", features = ["v4"] }
 chrono = "0.4.39"
 rand = "0.8.5"
 once_cell = "1.20.2"
-rusty-chromaprint = { git = "https://github.com/Losses/rusty-chromaprint", rev = "db4d9af2dd66f8c7f38f04725fb1780e64b4686f" }
+rusty-chromaprint = { version = "0.3.0" }
 
 [dev-dependencies]
 clap = "4.5.9"
