fix: use rinf_cli instead of rinf

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -174,7 +174,7 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install the Rust dependencies
-        run: cargo install 'flutter_rust_bridge_codegen' rinf protoc-gen-prost
+        run: cargo install 'flutter_rust_bridge_codegen' rinf_cli protoc-gen-prost
 
       - name: Activate Protobuf
         run: flutter pub global activate protoc_plugin
