fix: specify correct version in build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -175,7 +175,7 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install the Rust dependencies
-        run: cargo install 'flutter_rust_bridge_codegen' rinf_cli protoc-gen-prost
+        run: cargo install 'flutter_rust_bridge_codegen' rinf@7.0.1 protoc-gen-prost
 
       - name: Activate Protobuf
         run: flutter pub global activate protoc_plugin
@@ -184,7 +184,7 @@ jobs:
         run: flutter pub get
 
       - name: Generate message files
-        run: flutter pub run rinf message
+        run: rinf message
 
       - name: Build linux
         run: flutter build linux --release --verbose
