chore: Initialize the dependencies

--- a/fsio/Cargo.toml
+++ b/fsio/Cargo.toml
@@ -3,4 +3,12 @@ name = "fsio"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+name = "fsio"
+path = "src/lib.rs"
+
 [dependencies]
+anyhow = "1.0.98"
+log = "0.4.27"
+thiserror = "2.0.12"
+walkdir = "2.5.0"
