feat: Integrating fsio to the analysis package

--- a/analysis/Cargo.toml
+++ b/analysis/Cargo.toml
@@ -36,3 +36,4 @@ tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
 tracing-subscriber = "0.3.18"
 realfft = "3.4.0"
 cfg-if = "1.0.0"
+fsio = { version = "0.1.0", path = "../fsio" }
