--- a/tag-editor/Cargo.toml
+++ b/tag-editor/Cargo.toml
@@ -28,6 +28,7 @@ chrono = "0.4.39"
 rand = "0.8.5"
 once_cell = "1.20.2"
 rusty-chromaprint = { version = "0.3.0" }
+fsio = { version = "0.1.0", path = "../fsio" }
 
 [dev-dependencies]
 clap = { version = "4.5.9", features = ["derive"] }
