--- a/tag-editor/Cargo.toml
+++ b/tag-editor/Cargo.toml
@@ -29,6 +29,7 @@ rand = "0.8.5"
 once_cell = "1.20.2"
 rusty-chromaprint = { version = "0.3.0" }
 fsio = { version = "0.1.0", path = "../fsio" }
+fsio_media_source = { version = "0.1.0", path = "../fsio-media-source" }
 
 [dev-dependencies]
 clap = { version = "4.5.9", features = ["derive"] }
