fix: Add androidx.documentfile dependency for document file handling

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,3 +137,7 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {
+    implementation 'androidx.documentfile:documentfile:1.0.1'
+}
