chore: Extracting `create_https_client` and `send_http_request`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@
 # various Rust configurations.
 
 [workspace]
-members = ["native/hub", "native/requests", "cli", "tag-editor", "discovery", "sync", "fsio", "fsio-media-source", "playback"]
+members = ["native/hub", "native/requests", "cli", "tag-editor", "discovery", "sync", "fsio", "fsio-media-source", "playback", "http-request"]
 resolver = "2"
 
 [patch.crates-io]
