--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -37,7 +37,7 @@ tracing-subscriber = { version = "0.3.20", features = ["chrono", "registry"] }
 paste = "1.0.15"
 tokio-util = "0.7.11"
 num_cpus = "1.16.0"
-anyhow = { version = "1.0.89", features = ["backtrace"] }
+anyhow = { version = "1.0.98", features = ["backtrace"] }
 futures = "0.3.30"
 async-trait = "0.1.83"
 sysinfo = { version = "0.31.4", features = ["windows", "apple-app-store"] }
@@ -78,8 +78,6 @@ directories = "6.0.0"
 humantime = "2.1.0"
 rustls = { version = "0.23.23", features = ["ring"], default-features = false }
 serde_json = "1.0.140"
-hyper = "1.6.0"
-http-body-util = "0.1.2"
 urlencoding = "2.1.3"
 jsonwebtoken = "9.3.1"
 base64 = "0.22.1"
@@ -88,9 +86,10 @@ rpassword = "7.3.1"
 bincode = { version = "2.0.1", features = ["serde"] }
 fsio = { version = "0.1.0", path = "../../fsio" }
 mimetype-detector = "0.1.1"
+http-request = { version = "0.1.0", path = "../../http-request" }
 
 [build-dependencies]
-anyhow = { version = "1.0.89", features = ["backtrace"] }
+anyhow = { version = "1.0.98", features = ["backtrace"] }
 vergen = { version = "9.0.4", features = ["build", "cargo", "rustc", "si"] }
 
 # Uncomment below to target the web.
